--- a/website_quan_ly_tour/.htaccess
+++ b/website_quan_ly_tour/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 
 # Cập nhật nếu dự án chạy ở path khác
-RewriteBase /website_quan_ly_tour/
+RewriteBase /du_an_1_2025/website_quan_ly_tour/
 
 # Route trang chủ
 RewriteRule ^$ index.php [L,QSA]
